# AirQualityMonitor

./: CMakeLists.txt  Doxyfile  README.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tests.cpp
docs/html/: _air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.js  _air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d.html  _air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d_source.html  _air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_source.html  _air_quality_monitor__autogen_2include_2ui__mainwindow_8h.html  _air_quality_monitor__autogen_2include_2ui__mainwindow_8h.js  _air_quality_monitor__autogen_2include_2ui__mainwindow_8h_source.html  _air_quality_monitor__autogen_2moc__predefs_8h.html  _air_quality_monitor__autogen_2moc__predefs_8h.js  _air_quality_monitor__autogen_2moc__predefs_8h_source.html  _air_quality_monitor__autogen_2mocs__compilation_8cpp.html  _air_quality_monitor__autogen_2mocs__compilation_8cpp_source.html  _air_quality_monitor__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _air_quality_monitor__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.js  _air_quality_monitor__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d.html  _air_quality_monitor__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d_source.html  _air_quality_monitor__lib__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_source.html  _air_quality_monitor__lib__autogen_2include_2ui__mainwindow_8h.html  _air_quality_monitor__lib__autogen_2include_2ui__mainwindow_8h.js  _air_quality_monitor__lib__autogen_2include_2ui__mainwindow_8h_source.html  _air_quality_monitor__lib__autogen_2moc__predefs_8h.html  _air_quality_monitor__lib__autogen_2moc__predefs_8h.js  _air_quality_monitor__lib__autogen_2moc__predefs_8h_source.html  _air_quality_monitor__lib__autogen_2mocs__compilation_8cpp.html  _air_quality_monitor__lib__autogen_2mocs__compilation_8cpp_source.html  _air_quality_monitor_tests__autogen_2moc__predefs_8h.html  _air_quality_monitor_tests__autogen_2moc__predefs_8h.js  _air_quality_monitor_tests__autogen_2moc__predefs_8h_source.html  _air_quality_monitor_tests__autogen_2mocs__compilation_8cpp.html  _air_quality_monitor_tests__autogen_2mocs__compilation_8cpp.js  _air_quality_monitor_tests__autogen_2mocs__compilation_8cpp_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_test_air_quality_monitor-members.html  (+481 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_10.js  classes_11.js  classes_b.js  defines_0.js  defines_7.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  enums_5.js  enumvalues_10.js  enumvalues_a.js  files_2.js  files_3.js  files_4.js  (+41 more)
